--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 		/>
 		<title>GIF Search</title>
+		<link rel="shortcut icon" href="favicon-2.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="content">
